# ias

./: Cargo.toml  LICENSE-MIT  README.md
src/: assemble.rs  interpret.rs  main.rs  pipe.rs
